# vikunja-mcp

./: .pre-commit-config.yaml  CLAUDE.md  HISTORY.md  README.md  pyproject.toml
src/prism_vikunja_mcp/: __init__.py  __main__.py  configuration.py  mcp_server.py  openapi_registry.py  schema_validation.py  vikunja_api_client.py
